created background image

--- a/contact.html
+++ b/contact.html
@@ -5,25 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="stylelog.css">
-    <title>Our contacts</title>
+    <link rel="stylesheet" href="./stlyelog.css">
+    <title>BOOKINGS</title>
 </head>
 
 <body>
-    <section>
-        <div class="hero">
-            <!--navigation links-->
-            <div class="nav-link">
-                <ul>
-                    <li><a href="index.html">MENU</a></li>
-                    <li><a href="bookings.html">BOOKINGS</a></li>
-                    <li><a href="places.html">PLACE TO VISITS</a></li>
-                    <li><a href="contact.html">OUR CONTACTS</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
-                </ul>
-            </div>
+    <div class="hero">
+        <!--navigation links-->
+        <div class="nav-link">
+            <ul>
+                <li><a href="index.html">MENU</a></li>
+                <li><a href="bookings.html">BOOKINGS</a></li>
+                <li><a href="places.html">PLACE TO VISITS</a></li>
+                <li><a href="contact.html">OUR CONTACTS</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+            </ul>
         </div>
-    </section>
+    </div>
     <div class="quote">
         <h1>OUR CONTACTS</h1>
         <p>Get in touch with us for any inquiries or support. We are here to help you plan the perfect trip.</p>
@@ -43,7 +41,4 @@
     </div>
     </div>
     </div>
-    </div>
-
-
 </body>
