--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="stylelog.css">
+    <link rel="stylesheet" href="./stlyelog.css">
     <title>TOURISM WEBSITE</title>
 </head>
 
@@ -26,6 +26,7 @@
         </div>
         <div class="quote">
             <h1 class="h1">Campsite Kenya </h1>
+            <p class="h1">Welcome to our prestigious tourism booking agency</p>
             <h3>Tourism is Travel for pleasure</h3>
             <h6>Immerse yourself in Kenya’s rich cultural heritage.<br /> Visit traditional villages,<br /> Relax on the
                 pristine beaches of the Kenyan coast, <br />and Explore Kenya’s famous national parks and reserves.</h6>
