--- a/bookings.html
+++ b/bookings.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="stylelog.css">
+    <link rel="stylesheet" href="./stlyelog.css">
     <title>BOOKINGS</title>
 </head>
 
