--- a/places.html
+++ b/places.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="stylelog.css">
+    <link rel="stylesheet" href="./stlyelog.css">
     <title>PLACES</title>
 </head>
 
@@ -49,12 +49,11 @@
         also home to diverse wildlife, including rhinos, lions, and leopards.</p>
     <section>
         <div class="img">
-            <img src="images/seventhpic.jpg" alt="image" class="french" />
-            <img src="images/pic8.jpg" alt="image" class="french" />
+            <img src="images/fifthpic.jpg" alt="image" class="french" />
             <img src="images/seventhpic.jpg" alt="image" class="french" />
             <img src="images/sixth pic.jpg" alt="image" class="french" />
             <img src="images/onepic.jpg" alt="image" class="french" />
-            <img src="images/threepic.jpg" alt="image" class="french" />
+        
         </div>
     </section>
     </div>
