added social media image icons

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
             <i class="fa fa-linkedin" aria-hidden="true"><a href="#" class="icon-link">linkedin</a></i>
         </div>
         <div class="icon-list">
-            <i class="fa fa-github" aria-hidden="true">
+            <i class="fas fa-envelope" aria-hidden="true">
                 <a href="#" class="icon-link">Gmail</a>
             </i>
 
@@ -41,4 +41,5 @@
     </div>
     </div>
     </div>
+    <script src="https://kit.fontawesome.com/63009a3ee4.js" crossorigin="anonymous"></script>
 </body>
