--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
                 <li><a href="contact.html">OUR CONTACTS</a></li>
                 <li><a href="about.html">ABOUT</a></li>
             </ul>
-            <div class="icon-list">
-                <i class="fa-solid fa-mobile-screen mobile-icon"><span>Call me</span></i>
-            </div>
         </div>
         <div class="quote">
             <h1 class="h1">Campsite Kenya </h1>
@@ -41,9 +38,11 @@
             </div>
             <!--social media icons-->
             <div class="social-icons">
-                <img src="fb.png">
-                <img src="tw.png">
-                <img src="gp.png">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-x-twitter"></i>
+                <i class="fas fa-envelope"></i>
+    
+
             </div>
             <!--Emails and personal detials-->
             <form id="login" class="input-group">
