--- a/places.html
+++ b/places.html
@@ -53,6 +53,8 @@
             <img src="images/seventhpic.jpg" alt="image" class="french" />
             <img src="images/sixth pic.jpg" alt="image" class="french" />
             <img src="images/onepic.jpg" alt="image" class="french" />
+            <img src="images/pic6.jpg" alt="image" class="french" />
+            <img src="images/pic8.jpg" alt="image" class="french" />
         
         </div>
     </section>
