added media querry

--- a/about.html
+++ b/about.html
@@ -10,21 +10,24 @@
 </head>
 
 <body>
-    <div class="hero">
-        <!--navigation links-->
-        <div class="nav-link">
-            <ul>
-                <li><a href="index.html">MENU</a></li>
-                <li><a href="bookings.html">BOOKINGS</a></li>
-                <li><a href="places.html">PLACE TO VISITS</a></li>
-                <li><a href="contact.html">OUR CONTACTS</a></li>
-                <li><a href="about.html">ABOUT</a></li>
-            </ul>
-        </div>
-    </div>
+    <header id="header">
+        <div class="hero">
+            <!--navigation links-->
+            <div class="nav-link">
+                <ul>
+                    <li><a href="index.html" >MENU</a></li>
+                    <li><a href="bookings.html">BOOKINGS</a></li>
+                    <li><a href="places.html">PLACE TO VISITS</a></li>
+                    <li><a href="contact.html">OUR CONTACTS</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
+                </ul>
+            </div>
+            </div>
+
+    </header>
     <div class="quote">
-        <h1>ABOUT</h1>
-        <p>Learn more about our <a  href="#">mission and values</a>. We are dedicated to providing the best travel experiences for our
+        <h1 class="h1">ABOUT</h1>
+        <p >Learn more about our <a  href="#">mission and values</a>. We are dedicated to providing the best travel experiences for our
             customers.</p>
     </div>
 
