--- a/places.html
+++ b/places.html
@@ -10,11 +10,12 @@
 </head>
 
 <body>
-    <div class="hero">
+    <header id="header">
+  <div class="hero">
         <!--navigation links-->
         <div class="nav-link">
             <ul>
-                <li><a href="index.html">MENU</a></li>
+                <li><a href="index.html" class="active">MENU</a></li>
                 <li><a href="bookings.html">BOOKINGS</a></li>
                 <li><a href="places.html">PLACE TO VISITS</a></li>
                 <li><a href="contact.html">OUR CONTACTS</a></li>
@@ -22,6 +23,8 @@
             </ul>
         </div>
     </div>
+    </header>
+  
     <div class="quote">
         <h1>PLACES TO VISIT</h1>
         <p>Explore the breathtaking destinations that await you. From serene beaches to majestic mountains, there's
