--- a/bookings.html
+++ b/bookings.html
@@ -10,20 +10,23 @@
 </head>
 
 <body>
-    <div class="hero">
-        <!--navigation links-->
-        <div class="nav-link">
-            <ul>
-                <li><a href="index.html">MENU</a></li>
-                <li><a href="bookings.html">BOOKINGS</a></li>
-                <li><a href="places.html">PLACE TO VISITS</a></li>
-                <li><a href="contact.html">OUR CONTACTS</a></li>
-                <li><a href="about.html">ABOUT</a></li>
-            </ul>
-        </div>
+    <header id="header">
+        <div class="hero">
+            <!--navigation links-->
+            <div class="nav-link">
+                <ul>
+                    <li><a href="index.html">MENU</a></li>
+                    <li><a href="bookings.html">BOOKINGS</a></li>
+                    <li><a href="places.html">PLACE TO VISITS</a></li>
+                    <li><a href="contact.html">OUR CONTACTS</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
+                </ul>
+            </div>
+</div>
+    </header>
     </div>
     <div class="quote">
-        <h1>BOOKINGS</h1>
+        <h1 class="h1">BOOKINGS</h1>
         <p>Plan your trip and make reservations with ease. Discover various packages and options to suit your travel needs.</p>
         <p>For more enquiries please visit us at <a href="#">www.campsitekenya.com</a></p>
     </div>
