--- a/contact.html
+++ b/contact.html
@@ -10,31 +10,35 @@
 </head>
 
 <body>
-    <div class="hero">
-        <!--navigation links-->
-        <div class="nav-link">
-            <ul>
-                <li><a href="index.html">MENU</a></li>
-                <li><a href="bookings.html">BOOKINGS</a></li>
-                <li><a href="places.html">PLACE TO VISITS</a></li>
-                <li><a href="contact.html">OUR CONTACTS</a></li>
-                <li><a href="about.html">ABOUT</a></li>
-            </ul>
-        </div>
-    </div>
+    <header id="header">
+        <div class="hero">
+            <!--navigation links-->
+            <div class="nav-link">
+                <ul>
+                    <li><a href="index.html" >MENU</a></li>
+                    <li><a href="bookings.html">BOOKINGS</a></li>
+                    <li><a href="places.html">PLACE TO VISITS</a></li>
+                    <li><a href="contact.html">OUR CONTACTS</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
+                </ul>
+            </div>
+</div>
+    </header>
     <div class="quote">
-        <h1>OUR CONTACTS</h1>
+        <h1 class="h1">OUR CONTACTS</h1>
         <p>Get in touch with us for any inquiries or support. We are here to help you plan the perfect trip.</p>
         <div class="icon-list">
-            <i class="fa-brands fa-facebook"><a href="#" class="icon-link">Facebook</a></i>
+            <i class="fa-brands fa-facebook"><a href="#" class="icon">Facebook</a></i>
         </div>
-
         <div class="icon-list">
-            <i class="fa fa-linkedin" aria-hidden="true"><a href="#" class="icon-link">linkedin</a></i>
+      <i class="fa-brands fa-x-twitter"></i><a href="#" class="icon">Twitter</a></i>
+        </div>
+        <div class="icon-list">
+            <i class="fa fa-linkedin" aria-hidden="true"><a href="#" class="icon">linkedin</a></i>
         </div>
         <div class="icon-list">
             <i class="fas fa-envelope" aria-hidden="true">
-                <a href="#" class="icon-link">Gmail</a>
+                <a href="#" class="icon">Gmail</a>
             </i>
 
         </div>
