--- a/index.html
+++ b/index.html
@@ -10,22 +10,25 @@
 </head>
 
 <body>
-    <div class="hero">
-        <!--navigation links-->
-        <div class="nav-link">
-            <ul>
-                <li><a href="index.html">MENU</a></li>
-                <li><a href="bookings.html">BOOKINGS</a></li>
-                <li><a href="places.html">PLACE TO VISITS</a></li>
-                <li><a href="contact.html">OUR CONTACTS</a></li>
-                <li><a href="about.html">ABOUT</a></li>
-            </ul>
-        </div>
+    <header id="header">
+        <div class="hero">
+            <!--navigation links-->
+            <div class="nav-link">
+                <ul>
+                    <li><a href="index.html" >MENU</a></li>
+                    <li><a href="bookings.html">BOOKINGS</a></li>
+                    <li><a href="places.html">PLACE TO VISITS</a></li>
+                    <li><a href="contact.html">OUR CONTACTS</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
+                </ul>
+            </div>
+    </header>
+  
         <div class="quote">
             <h1 class="h1">Campsite Kenya </h1>
             <p class="h1">Welcome to our prestigious tourism booking agency</p>
-            <h3>Tourism is Travel for pleasure</h3>
-            <h6>Immerse yourself in Kenya’s rich cultural heritage.<br /> Visit traditional villages,<br /> Relax on the
+            <h3 class="h1">Tourism is Travel for pleasure</h3>
+            <h6 class="h1">Immerse yourself in Kenya’s rich cultural heritage.<br /> Visit traditional villages,<br /> Relax on the
                 pristine beaches of the Kenyan coast, <br />and Explore Kenya’s famous national parks and reserves.</h6>
         </div>
         <!--login forms-->
@@ -59,7 +62,7 @@
                 <button type="submit" class="submit-btn">Register</button>
             </form>
         </div>
-    </div>
+   
     <script src="https://kit.fontawesome.com/63009a3ee4.js" crossorigin="anonymous"></script>
 </body>
 
