--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <li><a href="about.html">ABOUT</a></li>
                 </ul>
             </div>
+            </div>
     </header>
   
         <div class="quote">
